# fake-news-nlp

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-setup.sh  main.py  pyproject.toml  setup.sh
data/: README.md
data/samples/: sample_texts.txt
docs/: data_pipeline.md
models/: .gitkeep
models/ml_models/: .gitkeep
models/vectorizers/: .gitkeep
notebooks/: eda.ipynb
src/: features.py  models.py  predict.py  preprocessing.py  train.py
