[project]
name = "fake-news-nlp"
version = "0.1.0"
description = "Fake News Detection using NLP"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.3.2",
    "numpy>=1.25.0",
    "scikit-learn>=1.7.2",
    "matplotlib>=3.7.1",
    "seaborn>=0.13.2",
    "nltk>=3.9.1",
    "gensim>=4.3.3",
    "spacy>=3.8.7",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "wordcloud>=1.9.4",
    "torch==2.2.0",
    "transformers>=4.32.0",
    "tqdm>=4.66.1",
    "ipykernel>=6.30.1",
    "argparse>=1.4.0",
    "xgboost>=3.0.5",
    "jupyter>=1.1.1",
]

# Specify Python version for uv
tool.uv.required-environments = ["python-3.10"]
